--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
+    "format": "eslint . --ext .js,.jsx,.ts,.tsx --fix && prettier --write .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -25,8 +27,15 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.3",
     "@tsconfig/docusaurus": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "husky": "^8.0.3",
+    "install": "^0.13.0",
     "lint-staged": "^15.0.1",
+    "npm": "^10.2.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
   },
@@ -43,7 +52,8 @@
     ]
   },
   "lint-staged": {
-    "*": "prettier --write"
+    "*": "prettier --write",
+    "*.{js,jsx,ts,tsx}": "eslint --fix"
   },
   "engines": {
     "node": ">=16.14"
